[package]
name = "Proyecto_Api_ESD2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "chrono"] }
dotenvy = "0.15"
rust_decimal = { version = "1.36", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
split-debuginfo = "unpacked"